[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
    "labtest @ git+ssh://git@github.com/ic-designer/python-labtest.git#main",
]
[project]
dependencies = []
description = "Python code used for testing the SUNROCK chip."
name = "sunrock-labtests"
readme = "README.md"
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "isort",
    "isort[colors]",
    "mypy",
    "pylint",
    "pyprojectsort",
    "pytest",
    "pytest-clarity",
    "ruff",
]

[project.scripts]
labtest = "labtest.labtest:main"

[tool.black]
skip_magic_trailing_comma = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.ruff]
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
ignore = [
    "COM812",
    "D104",
    "ISC001",
    "RET505",
]
select = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
namespaces = false
where = [
    "src",
]
