[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61.0",
]

[project]
dependencies = [
    "labtest @ git+ssh://git@github.com/ic-designer/python-labtest.git#main",
]
description = "Python code used for testing the SUNROCK chip."
name = "sunrock-labtests"
readme = "README.md"
version = "0.1.0"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "flake8-bugbear",
    "flake8-class-attributes-order",
    "flake8-comprehensions",
    "flake8-pytest-style",
    "flake8-use-fstring",
    "isort",
    "isort[colors]",
    "mypy",
    "pylint",
    "pyprojectsort",
    "pytest",
    "pytest-clarity",
    "ruff",
]

[tool.black]
skip_magic_trailing_comma = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.ruff]
src = [
    "src",
    "tests",
]

[tool.ruff.lint]
ignore = [
    "COM812",
    "D100",
    "D104",
    "EM101",
    "EM102",
    "FIX002",
    "ISC001",
    "RET505",
    "TD003",
    "TRY003",
]
select = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
namespaces = false
where = [
    "src",
]
